# riichicitymax

./: .gitignore  README.md  addons.old.py  addons.py  consts.py  logger.py  manager.py  pyproject.toml  rctypes.py  requirements.txt  user_data.toml
mjai/: online.json  player.py
mjai/bot/: bot.py  model.py
