[project]
name = "riichicitymax"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "slqy", email = "sqiyel@gmail.com"},
]
dependencies = [
    "mitmproxy>=10.4.2",
    "loguru>=0.7.2",
    "sh>=2.0.7",
    "rich>=13.7.1",
    "pydantic>=2.8.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
